tools/tests/errors/surf_lex_04.ki
# LEXER: a raw triple-quoted string opened but never closed
var s = r"""raw triple opened here
and never terminated